--- a/src/style.css
+++ b/src/style.css
@@ -38,3 +38,31 @@ h1{
 body{
     background-color:rgb(212 221 221);
 }
+
+
+.card{
+    width: 270px;
+    height: 290px;
+    display: flex;
+    margin: 45px;
+    border: 1px solid black;
+    border-radius: 76px;
+
+}
+
+.card-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 20px 30px;
+    margin: 60px;
+}
+
+.title-card{
+    padding: 20px;
+    font-size: 130%;
+    margin: 40px;
+    text-align: center;
+    margin-bottom: -43px;
+    font-family: fantasy;
+}
