--- a/src/style.css
+++ b/src/style.css
@@ -67,3 +67,22 @@ body{
     margin-bottom: -43px;
     font-family: fantasy;
 }
+
+.title-films{
+    padding: 20px;
+    font-size: 200%;
+    margin: 50px;
+    text-align: center;
+    margin-bottom: -43px;
+    font-family: fantasy;
+}
+
+.card-films{
+    width: 228px;
+    height: 255px;
+    display: flex;
+    margin: 45px;
+    border: 1px solid black;
+    border-radius: 76px;
+
+}
