--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
-h1{
+h1 {
     text-align: center;
     font-family: fantasy;
     font-size: 250%;
     font-family: cursive;
 }
 
-.linea{
+.linea {
     border-top: 1px solid black;
     height: 2px;
     max-width: 80%;
@@ -13,11 +13,12 @@ h1{
     margin: 2px auto 0 auto;
 }
 
-#movies-button{
+#movies-button {
     text-align: center;
     background: transparent;
 }
-#image-movies{
+
+#image-movies {
     margin: 0 auto;
     Text-align: center;
     Align-content: center;
@@ -25,23 +26,23 @@ h1{
     justify-content: center;
     align-items: center;
     align-self: center;
-    width:60%;
-    height:20%;
-    margin-left:19%  
+    width: 60%;
+    height: 20%;
+    margin-left: 19%
 }
 
-#imagen-baner{
-    width:60%;
-    height:200px;
-    margin-left:20%
+#imagen-baner {
+    width: 60%;
+    height: 200px;
+    margin-left: 20%
 }
 
-body{
-    background-color:rgb(212 221 221);
+body {
+    background-color: rgb(212 221 221);
 }
 
 
-.card{
+.card {
     width: 228px;
     height: 255px;
     display: flex;
@@ -51,7 +52,7 @@ body{
 
 }
 
-.card-container{
+.card-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -59,7 +60,7 @@ body{
     margin: 60px;
 }
 
-.title-card{
+.title-card {
     padding: 20px;
     font-size: 130%;
     margin: 40px;
@@ -68,7 +69,7 @@ body{
     font-family: fantasy;
 }
 
-.title-films{
+.title-films {
     padding: 20px;
     font-size: 200%;
     margin: 50px;
@@ -77,7 +78,7 @@ body{
     font-family: fantasy;
 }
 
-.card-films{
+.card-films {
     width: 228px;
     height: 255px;
     display: flex;
@@ -87,13 +88,13 @@ body{
 
 }
 
-.select{
+.select {
     display: none;
 }
 
 
 /* Estilos para el botón de filtro */
-.select{
+.select {
     background-color: #4CAF50;
     border: none;
     color: white;
@@ -106,40 +107,78 @@ body{
     cursor: pointer;
     border-radius: 4px;
     transition-duration: 0.4s;
-  }
-  
-  /* Estilos para el hover del botón */
-  .select:hover{
+}
+
+/* Estilos para el hover del botón */
+.select:hover {
     background-color: #3e8e41;
     color: white;
-  }
-  
-  /* Estilos para el foco del botón */
-  .select:focus{
-    outline: none;
-    box-shadow: 0 0 5px rgba(0,0,0,0.3);
-  }
+}
 
-  .div-select{
+/* Estilos para el foco del botón */
+.select:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.div-select {
     padding: 10px 24px;
     display: flex;
     margin: 4px 2px;
     cursor: pointer;
-  }
-  
-  /* Estilos para el hover del botón */
-  .select:hover{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/* Estilos para el hover del botón */
+.select:hover {
     background-color: #3e8e41;
     color: white;
-  }
-  
-  /* Estilos para el foco del botón */
-  .select:focus{
+}
+
+/* Estilos para el foco del botón */
+.select:focus {
     outline: none;
-    box-shadow: 0 0 5px rgba(0,0,0,0.3);
-  }
-.input{
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.input {
     width: 10%;
     height: 62%;
- 
+
 }
+
+/*
+Estilos generales para pantallas más grandes
+Estilos para pantallas de menos de 500px */
+@media(max-width: 639px){
+
+    /* Ajustes para el encabezado */
+    h1{
+        font-size: 90%;
+        margin-bottom: 0.5rem;
+
+        }
+
+    /* Ajustes para la sección de contenido */ 
+    .card-container{
+        margin:14%;
+        padding: 1rem;
+        width: 50px;
+        height: 50px;
+    
+    }
+
+    /* Ajustes para las imágenes */ 
+    img{
+        max-width: 100%;
+        height: auto;
+        }
+
+    /* Ajustes para los enlaces */ 
+    a{
+        font-size: 0.8rem;
+        }
+}
+
