--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,13 @@ h1 {
     font-family: cursive;
 }
 
+
+
+h2 {
+    text-align: center;
+    justify-content: center;
+}
+
 .linea {
     border-top: 1px solid black;
     height: 2px;
