--- a/src/style.css
+++ b/src/style.css
@@ -27,9 +27,8 @@ h2 {
 }
 
 #imagen-baner {
-    width: 60%;
+    width: 100%;
     height: 200px;
-    margin-left: 20%;
 }
 
 body {
@@ -116,12 +115,12 @@ body {
 }
 
 .div-select {
-    padding: 10px 24px;
     margin: 4px 2px;
     cursor: pointer;
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 /* Estilos para el hover del botón */
@@ -139,86 +138,5 @@ body {
 .input {
     width: 10%;
     height: 62%;
-
-}
-
-@media(max-width: 639px) {
-
-    body{
-        margin: 1px;
-        border: 1px;
-        padding: 1px;
-    }
-
-    figure {
-        margin: 0px;
-    }
-
-    #imagen-baner {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 250px;
-        height: 80px;
-        margin: 30px;
-        border: 30px;
-    }
-
-    /* Ajustes para el encabezado */
-    .linea{
-        margin: 10px;
-    }
-    h1 {
-        font-family: Papyrus, fantasy;
-        font-size: 18px;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: 250px;
-        line-height: 10px;
-        margin: 10px;
-    }
-
-    /*Ajustes para los botones de búsqueda*/
-    .select {
-        background-color: #4CAF50;
-        border: none;
-        padding: 05px 03px;
-        text-align: center;
-        display: flex;
-        font-size: 08px;
-        margin: 4px 2px;
-        cursor: pointer;
-        border-radius: 4px;
-        transition-duration: 0.4s;
-    }
-    /*.div-select {
-        display: flex;
-        cursor: pointer;
-        font-size: 5px;
-        height: 10px;
-        width: 10px;
-        padding: 05px 10px;
-        margin: 4px 2px;
-    }*/
-
-    /* Ajustes para la sección de contenido */
-
-    .card {
-        justify-content: center;
-        flex-grow: auto;
-        width: 150px;
-        height: 150px;
-        display: flex;
-        margin: 30px;
-        border-radius: 30px;
-        
-    }
-
-    #card-container.card-container{
-        display: flex;
-        margin: 20px;
-        padding: 0%;
-    }
-
 
 }
