--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 h1 {
     text-align: center;
     font-family: Papyrus, fantasy;
@@ -10,7 +11,7 @@ h1 {
 
 h2 {
     text-align: center;
-    justify-content: center;
+    
 }
 
 .linea {
@@ -44,7 +45,7 @@ body {
     margin: 45px;
     border: 1px solid black;
     border-radius: 76px;
-
+    cursor: pointer;
 }
 
 .card-container {
@@ -222,3 +223,46 @@ body {
 
 
 }
+button {
+    background-color: #47a386;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    color: #fff;
+    font-size: 14px;
+    padding: 10px 25px;
+    position: absolute;
+    top: 30%;
+    margin-left: 46%;
+  }
+
+.modal-container {
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.3);
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    pointer-events: none;
+    opacity: 0;  
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    transition: opacity 0.3s ease;
+  }
+  .show {
+    pointer-events: auto;
+    opacity: 1;
+  }
+
+  .modal {
+    background-color: #fff;
+    width: 600px;
+    max-width: 100%;
+    padding: 30px 50px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    text-align: center;
+  }
+  
+  
