--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,8 @@ h1 {
 
 h2 {
     text-align: center;
-    
+    font-family: Papyrus, fantasy;
+    font-weight: 700; 
 }
 
 .linea {
@@ -61,7 +62,7 @@ body {
     margin: 40px;
     text-align: center;
     margin-bottom: -43px;
-    font-family: fantasy;
+    font-family: Papyrus, fantasy;
 }
 
 .title-films {
@@ -70,7 +71,27 @@ body {
     margin: 50px;
     text-align: center;
     margin-bottom: -43px;
-    font-family: fantasy;
+    font-family: Papyrus, fantasy;
+}
+
+.title-film{
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif; 
+    font-size: 24px; font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 26.4px
+    
+}
+
+.description{
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif; 
+    font-size: 24px; font-style: normal; 
+    font-variant: normal; 
+    line-height: 26.4px;
+    text-align: justify;
+    margin-left: 20%;
+    margin-right: 20%;
+
 }
 
 .card-films {
