--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,7 @@ body {
 
 .select {
     display: none;
+    color: white;
 }
 
 /* Estilos para el botón de filtro */
@@ -173,7 +174,7 @@ button {
     position: absolute;
     top: 30%;
     margin-left: 46%;
-  }
+}
 
 .modal-container {
     display: flex;
@@ -188,13 +189,13 @@ button {
     height: 100vh;
     width: 100vw;
     transition: opacity 0.3s ease;
-  }
-  .show {
+}
+.show {
     pointer-events: auto;
     opacity: 1;
-  }
+}
 
-  .modal {
+.modal {
     background-color: #fff;
     width: 600px;
     max-width: 100%;
@@ -202,4 +203,16 @@ button {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     text-align: center;
-  }
+}
+
+#table{
+    font-family: "Lucida Grande", "Lucida Sans Unicode", 
+    "Lucida Sans", Geneva, 
+    Verdana, sans-serif; 
+    font-size: 24px; font-style: normal; 
+    font-variant: normal; 
+    line-height: 26.4px;
+    text-align: justify;
+    margin-left: 20%;
+    margin-right: 20%;
+}
