--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,16 @@ img.card:hover {
 
 }
 
+.back{
+    width: 200px;
+    height: 70px;
+    margin-left: 90%;
+    margin-bottom: 80% ;
+    background-color: #758076;
+    font-size: medium;
+    position: absolute;top: 96%;
+}
+
 .select {
     display: none;
     color: white;
